--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
+  },
+  "dependencies": {
+    "rxjs": "^7.8.1"
   }
 }
