--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
+    "radash": "^12.1.0",
     "rxjs": "^7.8.1"
   }
 }
