--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "radash": "^12.1.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   }
 }
