--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "devDependencies": {
     "prettier": "3.3.3",
     "typescript": "^5.5.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "@types/uuid": "^10.0.0"
   },
   "dependencies": {
-    "@types/uuid": "^10.0.0",
     "radash": "^12.1.0",
     "rxjs": "^7.8.1",
     "uuid": "^10.0.0"
